:sparkles: add support for V2 client